snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha256
41ace9f1eb2ce35f28edf9973debce3c2a3c3c66039ff6d29a492db3ea99c0ea